# Gym

./: CMakeLists.txt  Makefile  bench.cpp  bench.h  client.cpp  client.h  crossfit.cpp  crossfit.h  deadlift_position.cpp  deadlift_position.h  disc.cpp  disc.h  disc_rack.cpp  disc_rack.h  disc_rack_2.cpp  disc_rack_2.h  gym.cpp  gym.h  load.cpp  load.h  locker.cpp  locker.h  main  main.cpp  place_in_line.cpp  place_in_line.h  reception.cpp  reception.h  receptionist.cpp  receptionist.h  screen_printer.cpp  screen_printer.h  sync_channel.cpp  sync_channel.h  trainer.cpp  trainer.h
